@@ -140,8 +140,10 @@ TAO::Security::AccessDecision::map_key_from_objref (CORBA::Object_ptr /*obj */)
   ACE_ERROR ((LM_ERROR, "map_key_from_objref is currently not implemented\n"));
   throw CORBA::NO_IMPLEMENT();
 
-//  OBJECT_KEY key;
-//  return key;
+#if defined (__HP_aCC)
+  OBJECT_KEY key;
+  return key;
+#endif /* __HP_aCC */
 }
 
 CORBA::Boolean
